Fixed overflowing images in grid

--- a/plugins/installer/webinstaller/css/client.css
+++ b/plugins/installer/webinstaller/css/client.css
@@ -31,7 +31,8 @@
 .com-apps-container .item-info-container {margin-left: 25px; line-height: 25px}
 
 /* Grid */
-.com-apps-container .item-image{height:120px}
+.com-apps-container .item-image img { max-height: 120px; max-width: 100%; }
+.com-apps-container .item-image { margin-bottom: 10px; }
 .com-apps-container .item-description{height:100px; overflow: hidden}
 .com-apps-container .thumbnail{
 	padding: 16px 12px 16px 12px;
